# sui-move-bootcamp

./: .gitignore  README.md
A1/: README.md
A2/: README.md
A3/: README.md
A4/: README.md
A4/my_fist_contract/: Move.toml
B1/: README.md
B1/basic_move/: Move.toml
B2/: README.md
B2/sui_primitives/: Move.toml
B3/: README.md
B3/abilities_events_params/: Move.toml
B4/: README.md
C1/: README.md
C1/capability/: Move.toml
C1/publisher/: Move.toml
C1/ts/: .env.example  package-lock.json  package.json
C2/: README.md
C2/display/: Move.toml
C2/ts/: .env.example  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
C3/: README.md  execute.sh  execute_ptb.sh  split_and_transfer.sh
C3/age_calculator/: Move.toml
C3/my_event_emitter/: Move.toml
C3/my_event_emitter_ptb/: Move.toml
D1/: README.md
D2/: README.md
D3/: README.md
D4/: README.md
E1/: README.md
E2/: README.md
F1/: README.md
G1/: README.md
G2/: README.md
G3/: README.md
H1/: README.md
H2/: README.md
H3/: README.md
H4/: README.md
I1/: README.md
I2/: README.md
I3/: README.md
I4/: README.md
I5/: README.md
J1/: README.md
J1/indexer/: Cargo.toml  README.md  docker-compose.yaml
J1/indexer/migrations/2025-04-10-123207_create_tables/: down.sql  up.sql
J1/indexer/src/: lib.rs  main.rs  schema.rs
J1/indexer/tests/: integration_tests.rs
J1/indexer/tests/checkpoints/: 183081694.chk  183081695.chk  183081696.chk  183081697.chk  183081698.chk  183081699.chk  183081700.chk
J2/: README.md
ts-scaffold/: .env.example  README.md  package.json
(+250 files in other folders)
